<resources>
    <string name="app_name">UpNext</string>

    <!-- Menu actions-->
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_toggle_view">Toggle view</string>

    <!-- Generic actions (e.g. snackbar or dialog buttons) -->
    <string name="generic_action_done">Done</string>
    <string name="generic_action_undo">Undo</string>
    <string name="generic_action_cancel">Cancel</string>
    <string name="generic_action_create">Create</string>

    <!-- App-wide concepts -->
    <string name="app_watchlist">Watchlist</string>
    <string name="app_watched">Watched</string>

    <!-- Bottom navigation-->
    <string name="bottom_nav_shows">Shows</string>
    <string name="bottom_nav_movies">Movies</string>
    <string name="bottom_nav_discover">Discover</string>

    <!-- Fragment labels -->
    <string name="fragment_label_shows">Shows</string>
    <string name="fragment_label_movies">Movies</string>
    <string name="fragment_label_discover">Discover</string>
    <string name="fragment_label_search">Search</string>
    <string name="fragment_label_settings">Settings</string>
    <string name="fragment_label_licenses">Open Source Licenses</string>
    <string name="fragment_label_movie_add_to_lists">Add movie to lists</string>

    <!-- MainActivity - startup error dialog -->
    <string name="main_dialog_startup_error_title">Something went wrong!</string>
    <string name="main_dialog_startup_error_message">The app is currently unavailable, please try again later.</string>
    <string name="main_dialog_startup_positive_button">OK</string>

    <!-- MainActivity - internet required dialog -->
    <string name="main_dialog_internet_required_title">Device Offline</string>
    <string name="main_dialog_internet_required_message">You must be online to use the app. Please turn on your internet and try again.</string>
    <string name="main_dialog_internet_required_negative_button">Exit</string>
    <string name="main_dialog_internet_required_positive_button">Try again</string>

    <!-- ShowsFragment -->
    <string name="shows_tab_watchlist">@string/app_watchlist</string>
    <string name="shows_tab_watched">@string/app_watched</string>
    <string name="shows_tab_history">History</string>
    <string name="shows_add_tv_show">Add a tv show</string>

    <!-- MoviesFragment -->
    <string name="movies_tab_watchlist">@string/app_watchlist</string>
    <string name="movies_tab_watched">@string/app_watched</string>
    <string name="movies_add_movie">Add a movie</string>

    <!-- MovieListFragment -->
    <string name="movie_list_item_removed_from_list">%1$s removed from %2$s</string>
    <string name="movie_list_item_removed_from_list_no_movie_title">Removed from %1s</string>

    <!-- DiscoverTabsFragment -->
    <string name="discover_tabs_filter_button">Advanced</string>

    <!-- Discover Filters -->
    <string name="discover_filter_trending">Trending</string>
    <string name="discover_filter_popular">Popular</string>
    <string name="discover_filter_now_playing">Now Playing</string>
    <string name="discover_filter_airing_today">On Today</string>
    <string name="discover_filter_on_the_air_tv">This Week</string>
    <string name="discover_filter_top_rated">Top Rated</string>
    <string name="discover_filter_upcoming_movies">In Theatres</string>

    <!-- SearchFragment -->
    <string name="search_textfield_label">Find Movies, Shows or People…</string>

    <!--Content (movie/tv) Detail Fragment -->
    <string name="content_detail_add_to_watchlist">Add To Watchlist</string>
    <string name="content_detail_remove_from_watchlist">Remove From Watchlist</string>
    <string name="content_detail_add_to_list">Add To List</string>
    <string name="content_detail_runtime_mins">%1$s mins</string>
    <string name="content_detail_vote_average">%1$s/10</string>
    <string name="content_detail_seasons_header">Seasons</string>
    <string name="content_detail_videos_header">Videos</string>
    <string name="content_detail_photos_header">Photos</string>
    <string name="content_detail_cast_header">Cast</string>
    <string name="content_detail_crew_header">Crew</string>
    <string name="content_detail_recommended_content_header">You may also like</string>
    <string name="content_detail_divider">|</string>

    <!-- SettingsFragment -->
    <string name="settings_open_source_licenses">Open Source Licenses</string>

    <!-- LicensesFragment -->
    <string name="licenses_view_license">View License</string>

    <!-- AddToListsDialogFragment -->
    <string name="add_to_lists_save_show_title">Save show to…</string>
    <string name="add_to_lists_save_movie_title">Save movie to…</string>
    <string name="add_to_lists_new_list">+ New List</string>

    <!-- NewListDialogFragment -->
    <string name="new_list_header">New list</string>
    <string name="new_list_title">Title</string>
    <string name="new_list_title_untitled">Untitled</string>
    <string name="new_list_created">List \'%1$s\' created</string>
    <string name="new_list_created_action">See list</string>

    <!-- Error messages -->
    <string name="error_message_generic">UpNext encountered an error, please try again later</string>
    <string name="error_message_server">Server encountered a %$d error, please try again later</string>
    <string name="error_message_server_with_error">Server encountered a %1$d error, please try again later (status code: %2$d)</string>
    <string name="error_message_no_internet">Device is offline - please connect to a network and try again</string>
    <string name="error_no_internet_try_again_button">Try again</string>
    <string name="error_no_results_found">No results found</string>

</resources>
