<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobileNavigation"
    app:startDestination="@id/showsFragment">

    <fragment
        android:id="@+id/showsFragment"
        android:name="com.atherton.upnext.presentation.features.shows.ShowsFragment"
        android:label="@string/fragment_label_shows"
        tools:layout="@layout/fragment_shows"/>

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.atherton.upnext.presentation.features.movies.MoviesFragment"
        android:label="@string/fragment_label_movies"
        tools:layout="@layout/fragment_movies"/>

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.atherton.upnext.presentation.features.discover.DiscoverTabsFragment"
        android:label="@string/fragment_label_discover"
        tools:layout="@layout/fragment_discover_tabs"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.atherton.upnext.presentation.features.search.SearchFragment"
        android:label="@string/fragment_label_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.atherton.upnext.presentation.features.movies.detail.MovieDetailFragment"
        android:label="@string/fragment_label_movie_detail"
        tools:layout="@layout/fragment_movie_detail"/>

    <action
        android:id="@+id/actionSharedGoToSearch"
        app:destination="@+id/searchFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <action
        android:id="@+id/actionSharedGoToMovieDetail"
        app:destination="@+id/movieDetailFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

</navigation>
