<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context=".presentation.common.newlist.NewListDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2x"
        android:layout_marginBottom="@dimen/keyline"
        android:layout_marginStart="@dimen/keyline_2x"
        android:layout_marginEnd="@dimen/keyline_2x"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/newListHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/keyline_2x"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/new_list_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newListTitleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/newListHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/keyline_2x"
            app:hintEnabled="true"
            android:hint="@string/new_list_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppEditText"
                android:id="@+id/listTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newListCancelButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/newListTitleTextInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newListCreateButton"
            android:layout_marginTop="@dimen/keyline_3x"
            app:rippleColor="@color/white"
            android:textColor="@color/white"
            android:text="@string/generic_action_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newListCreateButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/newListCancelButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/white"
            android:textColor="@color/colorSecondary"
            android:text="@string/generic_action_create"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/error_retry_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>

</FrameLayout>
